[Fabric] NoRender, Fullbright (again)